LPS-42360 break-all will prevent overflow from containers

--- a/portal-web/docroot/html/themes/_styled/css/portlet.css
+++ b/portal-web/docroot/html/themes/_styled/css/portlet.css
@@ -184,6 +184,8 @@ body.portlet {
 	.lfr-url-error {
 		display: inline-block;
 		white-space: normal;
+
+		@include word-break(break-all);
 	}
 }
 
